# controller_plugin_speed_controller

./: CMakeLists.txt  package.xml  plugins.xml
config/: available_modes.yaml  default_controller.yaml  speed_controller.yaml
include/controller_plugin_speed_controller/: speed_controller.hpp  speed_controller_plugin.hpp
launch/: speed_controller_launch
lib/: speed_controller.cpp  speed_controller_plugin.cpp
src/: speed_controller.cpp  speed_controller_plugin.cpp
